fixed nav moving.
there was no scrollbar on the index. so, i've set minimum body height to be 100% of the viewport height (to always have a scrollbar).

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ section {
 }
 body {
   line-height: 1;
+  min-height: 100vh; 
 }
 ol,
 ul {
@@ -603,11 +604,10 @@ color: var(--secondary);
 /* #endregion */
 
 /* lander */
-.lander{
-  display:flex; 
-  flex-direction: column; 
-  height: 90vh; 
-  margin: 0 var(--global_horizontal-margin) 0 var(--global_horizontal-margin);
-  align-items: center; 
+#small{
+height: 25vw; 
+}
+#lander{
+  height: 80vh; 
   justify-content: center; 
 }
